# tenta

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: publication.yml  test-client.yml  test-server.yml
client/: .gitignore  README.md  example.md  example.py  pyproject.toml
client/scripts/: convert_example_to_markdown.py  develop  generate_documentation.py  generate_dummy_data.py  start-mosquitto.sh
client/tenta/: __init__.py  client.py  types.py
client/tests/: .gitignore  mosquitto.conf  test_config_receiving.py  test_connection.py  test_documentation.py  test_publishing.py  test_static_types.py
dashboard/: .env.development  .env.template  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx  swr-provider.tsx
dashboard/src/requests/: authentication.ts  configurations.ts  logs-aggregation.ts  logs.ts  measurements-aggregation.ts  measurements.ts  networks.ts  status.ts  (+2 more)
docs/: README.md  design.md  mqtt.md  netlify.toml  next.config.js  package-lock.json  package.json  postcss.config.js  style.css  tailwind.config.js  theme.config.jsx  tsconfig.json
docs/pages/: _app.mdx  _meta.json  community.mdx  connect.mdx  contribute.mdx  data.mdx  deployment.mdx  design.mdx  export.mdx  index.mdx  introduction.mdx  mqtt.mdx  next.mdx  overview.mdx  python.mdx  roadmap.mdx
publication/: paper.bib  paper.md
server/: .env.example  Dockerfile  README.md  openapi.yml  pyproject.toml  schema.sql
server/app/: auth.py  database.py  errors.py  logs.py  main.py  mqtt.py  queries.sql  settings.py  utils.py
server/scripts/: build  check  develop  initialize.py  jupyter  test
server/tests/: README.md  conftest.py  data.json  test_main.py  test_mqtt.py  test_routes.py  test_validation.py
(+50 files in other folders)
